--- a/google-analytics.html
+++ b/google-analytics.html
@@ -1,8 +1,8 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9P8D8CZDX5"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4HZS36ZTRP"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-9P8D8CZDX5');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-4HZS36ZTRP');
 </script>
